--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="www.linkedin.com/in/sathiyamoorthi-k-336a79307" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.linkedin.com/in/sathiyamoorthi-k-336a79307?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://github.com/Ksmashhero06" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                     <a href="https://unstop.com/u/sathiksm53217" class="home__social-icon" target="_blank"> <i class='bx bx-world'></i>
                       </a>
