--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <footer class="footer">
             <p class="footer__title">Sathiyamoorthi</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
+                <a href="https://www.facebook.com/ksmashhero06" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="https://www.instagram.com/kkssathiyamoorthi06?igsh=d2UxNmk0dGE2bXR5" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://x.com/Ksmashhero06" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
