--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="#contact" class="nav__link">contact</a></li>
                     </ul>
                 </div>
 
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/sathiyamoorthi-k-336a79307?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.linkedin.com/in/sathiyamoorthi-k-336a79307" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://github.com/Ksmashhero06" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                     <a href="https://unstop.com/u/sathiksm53217" class="home__social-icon" target="_blank"> <i class='bx bx-world'></i>
                       </a>
@@ -176,7 +176,7 @@
 
             <!--===== CONTACT =====-->
             <section class="contact section" id="contact">
-                <h2 class="section-title">Contact</h2>
+                <h2 class="section-title">contact</h2>
             
                 <div class="contact__container bd-grid">
                     <form action="" class="contact__form">
@@ -193,7 +193,7 @@
         <footer class="footer">
             <p class="footer__title">Sathiyamoorthi</p>
             <div class="footer__social">
-                <a href="https://www.facebook.com/ksmashhero06" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
+                <a href="https://fb.com/ksmashhero06" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="https://www.instagram.com/kkssathiyamoorthi06?igsh=d2UxNmk0dGE2bXR5" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://x.com/Ksmashhero06" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
